Think have to 0-terminate mod_values strings, got trailing garbage, this fixes bug #5001 I think.